ui/v2.5/src/components/List/styles.scss
/* ... */
.modifier-options {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.modifier-options .modifier-option {
  background-color: $secondary;
  border: none;
  border-radius: 10rem;
  cursor: pointer;
  display: inline-block;
  font-size: 100%;
  font-weight: 700;
  line-height: 1;
  margin-bottom: 0.5rem;
  margin-right: 0.25rem;
  padding: 0.25em 0.6em;
  text-align: center;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  vertical-align: baseline;
  white-space: nowrap;

  &.selected {
    background-color: $primary;
  }
}

.filter-tags .clear-all-button {
  color: $text-color;
  // to match filter pills
  line-height: 16px;
  padding: 0;
}

.filter-button {
  position: relative;

  .fa-icon {
    margin: 0;
  }

  .badge {
    font-size: 60%;
    position: absolute;
    right: 0;

    // button group has a z-index of 1
    z-index: 2;
  }
}

.filter-visible-button {
  padding-left: 0.3rem;
  padding-right: 0.3rem;

  &:focus:not(.active):not(:hover) {
    background: none;
  }

  &:focus,
  &.active:focus {
    box-shadow: none;
  }
}

.selectable-filter ul {
  list-style-type: none;
  margin-top: 0.5rem;
  max-height: 300px;
  overflow-y: auto;
  // to prevent unnecessary vertical scrollbar
  padding-bottom: 0.15rem;
  padding-inline-start: 0;

  .modifier-object {
    font-style: italic;

    .selected-object-label,
    .unselected-object-label {
      opacity: 0.6;
    }
  }

  .unselected-object {
    opacity: 0.8;
  }

  .selected-object,
  .excluded-object,
  .unselected-object {
    cursor: pointer;
    height: 2em;
    margin-bottom: 0.25rem;

    a {
      align-items: center;
      display: flex;
      height: 2em;
      justify-content: space-between;
      outline: none;

      &:hover,
      &:focus-visible {
        background-color: rgba(138, 155, 168, 0.15);
      }

      .selected-object-label,
      .excluded-object-label {
        font-size: 16px;
      }
    }

    .include-button {
      color: $success;
    }

    .exclude-icon {
      color: $danger;
    }

    .exclude-button {
      align-items: center;
      display: flex;
      margin-left: 0.25rem;
      padding-left: 0.25rem;
      padding-right: 0.25rem;

      .exclude-button-text {
        color: $danger;
        display: none;
        font-size: 12px;
        font-weight: 600;
      }

      &:hover {
        background-color: inherit;
      }

      &:hover .exclude-button-text,
      &:focus .exclude-button-text {
        display: inline;
      }
    }

    .object-count {
      color: $text-muted;
      font-size: 12px;
    }
  }

  .selected-object:hover,
  .selected-object a:focus-visible,
  .excluded-object:hover,
  .excluded-object a:focus-visible {
    .include-button,
    .exclude-icon {
      color: #fff;
    }
  }
}

.sidebar-list-filter .clearable-input-group {
  margin-bottom: 0.5rem;
}

.sidebar-list-filter ul {
  list-style-type: none;
  margin-bottom: 0.25rem;
  max-height: 300px;
  overflow-y: auto;
  // to prevent unnecessary vertical scrollbar
  padding-bottom: 0.15rem;
  padding-inline-start: 0;

  .modifier-object {
    font-style: italic;

    .selected-object-label,
    .unselected-object-label {
      opacity: 0.6;
    }
  }

  .unselected-object {
    opacity: 0.8;
  }

  .selected-object,
  .excluded-object,
  .unselected-object {
    cursor: pointer;
    height: 2em;
    margin-bottom: 0.25rem;

    a {
      align-items: center;
      display: flex;
      height: 2em;
      justify-content: space-between;
      outline: none;

      &:hover,
      &:focus-visible {
        background-color: rgba(138, 155, 168, 0.15);
      }

      .selected-object-label,
      .excluded-object-label {
        font-size: 16px;
      }
    }

    .include-button {
      color: $success;

      &.single-value {
        visibility: hidden;
      }
    }

    .exclude-icon {
      color: $danger;
    }

    .exclude-button {
      align-items: center;
      display: flex;
      margin-left: 0.25rem;
      padding-left: 0.25rem;
      padding-right: 0.25rem;

      .exclude-button-text {
        color: $danger;
        display: none;
        font-size: 12px;
        font-weight: 600;
      }

      &:hover {
        background-color: inherit;
      }

      &:hover .exclude-button-text,
      &:focus .exclude-button-text {
        display: inline;
      }
    }

    .object-count {
      color: $text-muted;
      font-size: 12px;
    }
  }

  .selected-object:hover,
  .selected-object a:focus-visible,
  .excluded-object:hover,
  .excluded-object a:focus-visible {
    .include-button,
    .exclude-icon {
      color: #fff;
    }
  }

  .selected-object,
  .unselected-object {
    .label-group {
      align-items: center;
      display: flex;
      overflow: hidden;
    }
  }
}

.sidebar-list-filter > .extra {
  padding-top: 0.25rem;
}

.sidebar-list-filter .extra {
  min-height: 2em;
}

.tilted {
  transform: rotate(45deg);
}
/* ... */

